# qchat-qfield-plugin

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  LICENSE  README.md  pyproject.toml
.github/: labeler.yml  release.yml
.github/scripts/: delete-pr-prereleases.js  generate_qr_code.py
.github/workflows/: autolabeler.yml  lint.yml  pr_qrcode.yml  release.yml  tests.yml
qfield-plugin-qchat/: main.qml  main_fr.ts  mainfr.ts  metadata.txt  translations.pro
tests/: __init__.py  conftest.py  test_plugin.py
tests/qfield_imports/Theme/: Theme.qml
