[project]
name = "qchat-qfield-plugin"
version = "1.5"
description = "Python project for QChat QField plugin tests."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-qfield>=0.9.0",
]

[tool.pytest.ini_options]
qt_api = "pyqt6"
qfield_imports_dir = "QField/src/qml/imports"

[tool.uv]
override-dependencies = [
    "PyQt6; sys_platform == 'never'",
]
